Updating video and overlay size to fix white borders on mobile devices

--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ body {
 }
 
 main {
-    width: 100%;
-    height: 100%;
+    height: 100vh;
+    width: 100vw;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -120,8 +120,8 @@ main {
 
 .X6DENT__Overlay {
     position: absolute;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     z-index: -1;
     background-color: #9675de8f;
 }
